--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="row mt-5">
             <div class="col-md-4">
-                <a href="#" class="project-link">
+                <a href="https://iftikharyk.github.io/crud_ajax" class="project-link">
                     <div class="card">
                         <h5>Crud Ajax</h5>
                         <p>A simple app doing CRUD app using PHP, MySQL, jQuery and AJAX</p>
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="#" class="project-link">
+                <a href="https://iftikharyk.github.io/gitfinder" class="project-link">
                     <div class="card">
                         <h5>GitFinder</h5>
                         <p>A very simple web app to find profile details on Github, with their username.</p>
