added new links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     </header>
 
     <main role="main" class="container">
-
+        <div class="row mt-2">
+            <div class="col-md-12">
+                <h5>Here is my <a href="https://iftikharyk.github.io/resume">resume</a></h5>
+            </div>
+        </div>
         <div class="row mt-5">
             <div class="col-md-4">
                 <a href="https://iftikharyk.github.io/crud_ajax" class="project-link">
@@ -44,6 +48,15 @@
                     <div class="card">
                         <h5>GitFinder</h5>
                         <p>A very simple web app to find profile details on Github, with their username.</p>
+                        <button class="view btn">Check it out!</button>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="https://iftikharyk.github.io/DigitalClock" class="project-link">
+                    <div class="card">
+                        <h5>Digital Clock</h5>
+                        <p>A simple digital clock with dynamic day and night wallpaper</p>
                         <button class="view btn">Check it out!</button>
                     </div>
                 </a>
