--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="https://iftikharyk.github.io/DigitalClock" class="project-link">
+                <a href="https://iftikharyk.github.io/DigitalClock/DigitalClock-master/" class="project-link">
                     <div class="card">
                         <h5>Digital Clock</h5>
                         <p>A simple digital clock with dynamic day and night wallpaper</p>
