font awesome cdn added

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
     <title>Resume</title>
     <link rel="stylesheet" href="css/w3.css" />
     <link rel="stylesheet" href="css/font.css" />
-    <link rel="stylesheet" href="css/fontawesome.css" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <style>
       html,
