Updated job status

--- a/resume/index.html
+++ b/resume/index.html
@@ -31,11 +31,7 @@
         <div class="w3-third">
           <div class="w3-white w3-text-grey w3-card-4">
             <div class="w3-display-container">
-              <img
-                src="img/profile.jpg"
-                style="width:100%"
-                alt="Avatar"
-              />
+              <img src="img/profile.jpg" style="width:100%" alt="Avatar"/>
               <div class="w3-display-bottomleft w3-container w3-text-white">
                 <h2>Iftikhar Yar Khan</h2>
               </div>
@@ -168,11 +164,24 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity">
-                <b>Jr Web Developer / Expertek Cyber Solutions</b>
+                <b>Web Developer / Sixlogs Technologies Pvt Ltd.</b>
               </h5>
               <h6 class="w3-text-deep-orange">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2018 -
                 <span class="w3-tag w3-deep-orange w3-round">Current</span>
+              </h6>
+              <p>
+                My responsibility is to make website and web application using angular and php, also i do some hybrid 
+                mobile application development.
+              </p>
+              <hr />
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Jr Web Developer / Expertek Cyber Solutions</b>
+              </h5>
+              <h6 class="w3-text-deep-orange">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2018 - Jan 2019
               </h6>
               <p>
                 My responsibility is to design mock ups and logos 
