--- a/news-app/index.html
+++ b/news-app/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>NewsApp</title>
-  <base href="/">
-
+  <base href="https://iftikharyk.github.io/news-app">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
