Added Node Stock link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     <main role="main" class="container">
         <div class="row mt-5">
             <div class="col-md-4">
+                <a href="https://nodestockquote.herokuapp.com/" class="project-link">
+                    <div class="card">
+                        <h5>Node Stock</h5>
+                        <p>Simple Webapp based to get current stock prices of companies</p>
+                        <button class="view btn">Check it out!</button>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
                 <a href="https://iftikharyk.github.io/crud_ajax" class="project-link">
                     <div class="card">
                         <h5>Crud Ajax</h5>
