--- a/airbnb/index.html
+++ b/airbnb/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Vacations Rentals, Homes, Experiences &amp; Places - Airbnb</title>
-  <base href="https://iftikharyk.github.io/airbnb">
+  <base href="https://iftikharyk.github.io/airbnb/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.fcad79894b804e2433ec.css"></head>
