--- a/getfeedback/index.html
+++ b/getfeedback/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Getfeedback</title>
-  <base href="/">
-
+  <base href="https://iftikharyk.github.io/getfeedback/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.1d39cf6d064d028c6ee4.css"></head>
