getfeedback - added create survey

--- a/getfeedback/index.html
+++ b/getfeedback/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Getfeedback</title>
+  <title>Feedbackwow</title>
   <base href="https://iftikharyk.github.io/getfeedback/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.1d39cf6d064d028c6ee4.css"></head>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+<link rel="stylesheet" href="styles.3a730d0b5a76e384f7cf.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.80ab492fe3d778817936.js"></script><script type="text/javascript" src="es2015-polyfills.4026386deac8c168a6f4.js" nomodule></script><script type="text/javascript" src="polyfills.7ff3fc35f9bdbaf81d86.js"></script><script type="text/javascript" src="scripts.dd7321f756895a7cb090.js"></script><script type="text/javascript" src="main.a3ba8eda57341e7ca422.js"></script></body>
+<script type="text/javascript" src="runtime.80ab492fe3d778817936.js"></script><script type="text/javascript" src="es2015-polyfills.4026386deac8c168a6f4.js" nomodule></script><script type="text/javascript" src="polyfills.7ff3fc35f9bdbaf81d86.js"></script><script type="text/javascript" src="scripts.dd7321f756895a7cb090.js"></script><script type="text/javascript" src="main.476d49737f54638be5ef.js"></script></body>
 </html>
