--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
     <main role="main" class="container">
         <div class="row mt-5">
             <div class="col-md-4">
+                <a href="https://iftikharyk.github.io/spotify/" class="project-link">
+                    <div class="card">
+                        <h5>Spotify Clone Web App</h5>
+                        <p>Spotify clone Webapp based on Angular and tailwindcss</p>
+                        <button class="view btn">Check it out!</button>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="https://iftikharyk.github.io/airbnb/" class="project-link">
+                    <div class="card">
+                        <h5>Airbnb Clone</h5>
+                        <p>Simple Webapp based on Angular and tailwindcss</p>
+                        <button class="view btn">Check it out!</button>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
                 <a href="https://iftikharyk.github.io/news-app/" class="project-link">
                     <div class="card">
                         <h5>News Web App</h5>
