--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <a href="https://iftikharyk.github.io/news-app/" class="project-link">
                     <div class="card">
                         <h5>News Web App</h5>
@@ -55,7 +55,7 @@
                         <button class="view btn">Check it out!</button>
                     </div>
                 </a>
-            </div>
+            </div> -->
             <div class="col-md-4">
                 <a href="https://nodestockquote.herokuapp.com/" class="project-link">
                     <div class="card">
@@ -65,7 +65,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <a href="https://iftikharyk.github.io/crud_ajax" class="project-link">
                     <div class="card">
                         <h5>Crud Ajax</h5>
@@ -73,7 +73,7 @@
                         <button class="view btn">Check it out!</button>
                     </div>
                 </a>
-            </div>
+            </div> -->
             <div class="col-md-4">
                 <a href="https://iftikharyk.github.io/gitfinder" class="project-link">
                     <div class="card">
