--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                     </div>
                 </a>
             </div>
+            <div class="col-md-4">
+                <a href="https://iftikharyk.github.io/mark-my-words/" class="project-link">
+                    <div class="card">
+                        <h5>Qoute Generator</h5>
+                        <p>Random qoute generate on reload</p>
+                        <button class="view btn">Check it out!</button>
+                    </div>
+                </a>
+            </div>
             <!-- <div class="col-md-4">
                 <a href="https://iftikharyk.github.io/news-app/" class="project-link">
                     <div class="card">
